Darkmode implemented Several CSS improvements Nav bar and collapsed popup fix

--- a/src/app/customers/customer-detail/customer-detail.component.scss
+++ b/src/app/customers/customer-detail/customer-detail.component.scss
@@ -16,7 +16,8 @@
     min-width: 10rem;
 }
 .address-label {
-    width: 7rem;
+    width: 6.2rem;
+    padding-right: 0;
 }
 .plz {
     width: 5rem;
@@ -30,7 +31,7 @@
         margin-top: 0.5rem;
     }
     .country-label {
-        width: 7rem;
+        width: 6.2rem;
     }
 
 }
