--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,11 +1,21 @@
 .nav-item {
     font-size: 1.25rem;
 
-    + .nav-item {
-        margin-left: 1rem;
-    }
 }
 .navbar-nav .nav-link.active {
     border-bottom-style: solid;
     border-width: 1px;
+}
+
+.navbar-collapse:not(.collapse) {
+    position: absolute;
+    top: 70px;
+    background: var(--bs-body-bg);
+    width: 100%;
+    box-shadow: 0px 0px 20px 10px #8080805c;
+    margin: 0;
+    left: 0;
+    border: 2px #c9c9c9 solid;
+    border-radius: 10px;
+    z-index: 1200;
 }
